--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,58 @@ li {
   .title-site__img {
     justify-content: center;
     align-content: center; }
+
+.container-head {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px; }
+
+.select__sel {
+  background: #2b2a29;
+  height: 40px;
+  width: 150px;
+  color: white;
+  font-family: sans-serif;
+  font-size: 15px;
+  padding-left: 5px;
+  padding-right: 10px;
+  border: 1px solid #2b2a29;
+  border-radius: 5px; }
+
+.select__sel:hover {
+  background: white;
+  color: black; }
+
+.input {
+  display: flex;
+  gap: 0.2px; }
+  .input__inp {
+    width: 400px;
+    height: 40px;
+    background: white;
+    border: 1px solid white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding-left: 10px; }
+  .input__inp--black {
+    background: #f26522;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #f26522;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px; }
+
+.button__btn {
+  background: white;
+  border: 1px solid white;
+  height: 40px;
+  width: 90px;
+  border-radius: 5px; }
+
+.button__link {
+  color: black;
+  text-decoration: none;
+  font-size: 14px; }
