--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,60 @@ li {
   color: black;
   text-decoration: none;
   font-size: 14px; }
+
+.center-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 50px; }
+  .center-title__text {
+    color: white;
+    font-size: 60px;
+    font-family: sans-serif;
+    font-weight: bold; }
+  .center-title__text:hover {
+    color: #f26522; }
+
+.button--black {
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+  padding-top: 30px; }
+  .button--black__btn {
+    background: #2b2a29;
+    width: 150px;
+    height: 50px;
+    color: white;
+    border: 1px solid #2b2a29;
+    border-radius: 5px; }
+  .button--black__btn:hover {
+    background: #f26522;
+    width: 150px;
+    height: 50px;
+    color: white;
+    border: 1px solid #f26522;
+    border-radius: 5px; }
+  .button--black__link {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bold; }
+
+main {
+  width: 100%; }
+
+.body-title {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-content: center;
+  text-align: center;
+  margin: 0% auto;
+  width: 21%;
+  padding-top: 10px; }
+  .body-title__text {
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+    color: #2b2a29; }
