--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,3 +132,72 @@ li {
     }
 
 }
+// big title 
+.center-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 50px;
+    &__text {
+        color: white;
+        font-size: 60px;
+        font-family: $font;
+        font-weight: bold;
+
+    }
+    &__text:hover {
+        color:#f26522;
+    
+    }
+}
+.button--black {
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    &__btn {
+        background: #2b2a29;
+        width: 150px;
+        height: 50px;
+        color: white;
+        border:  1px solid #2b2a29;
+       border-radius: 5px;
+    }
+    &__btn:hover {
+        background: #f26522;
+        width: 150px;
+        height: 50px;
+        color: white;
+        border:  1px solid #f26522;
+       border-radius: 5px;
+    }
+    &__link {
+        color: white;
+        text-decoration: none;
+        font-size: 15px;
+        font-weight: bold;
+    }
+}
+
+// body section
+main {
+    width: 100%
+} 
+.body-title {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
+    margin: 0% auto;
+    width: 21%;
+    padding-top: 10px;
+    &__text  {
+        text-align: center;
+        font-size: 30px;
+        font-family: $font;
+        color: #2b2a29;
+
+    }
+}
