--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,8 @@ li {
     font-weight: bold; }
 
 main {
-  width: 100%; }
+  width: 100%;
+  height: 1000px; }
 
 .body-title {
   display: flex;
@@ -167,3 +168,59 @@ main {
     font-size: 30px;
     font-family: sans-serif;
     color: #2b2a29; }
+
+.cart-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding-top: 50px; }
+
+.frist-cart {
+  background: white;
+  width: 350px;
+  height: 600px;
+  box-shadow: 10px 10px 10px 10px gainsboro;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.para {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  padding-top: -100px; }
+
+.para-pri {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+  color: #f26522;
+  padding-top: 5px; }
+
+.cart-text {
+  margin-top: -10px; }
+
+.buy {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 150px;
+  padding-top: 100px;
+  font-family: sans-serif; }
+  .buy__text-one {
+    color: #f26522;
+    font-weight: bold; }
+  .buy__text-one:hover {
+    color: #2b2a29;
+    font-weight: bold; }
+  .buy__text-two {
+    color: #2b2a29;
+    font-weight: bold; }
+  .buy__text-two:hover {
+    color: #f26522;
+    font-weight: bold; }
