--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ li {
 
 main {
   width: 100%;
-  height: 1000px; }
+  height: 3000px; }
 
 .body-title {
   display: flex;
@@ -167,7 +167,8 @@ main {
     text-align: center;
     font-size: 30px;
     font-family: sans-serif;
-    color: #2b2a29; }
+    color: #2b2a29;
+    font-weight: bold; }
 
 .cart-content {
   display: flex;
@@ -179,7 +180,7 @@ main {
 
 .frist-cart {
   background: white;
-  width: 350px;
+  width: 400px;
   height: 600px;
   box-shadow: 10px 10px 10px 10px gainsboro;
   display: flex;
@@ -223,4 +224,32 @@ main {
     font-weight: bold; }
   .buy__text-two:hover {
     color: #f26522;
+    font-weight: bold; }
+
+.squre {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 200px;
+  padding-top: 100px; }
+
+.first-squre {
+  width: 50px;
+  height: 50px;
+  background: #2b2a29; }
+
+.first-squre:hover {
+  background: #f26522; }
+
+.Electronic-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 20px; }
+  .Electronic-title__text {
+    font-family: sans-serif;
+    font-size: 40px;
     font-weight: bold; }
