--- a/scss/main.scss
+++ b/scss/main.scss
@@ -183,7 +183,7 @@ li {
 // body section
 main {
     width: 100%;
-    height: 1000px;
+    height: 3000px;
 } 
 .body-title {
     display: flex;
@@ -199,6 +199,7 @@ main {
         font-size: 30px;
         font-family: $font;
         color: #2b2a29;
+        font-weight: bold
 
     }
 }
@@ -213,7 +214,7 @@ main {
 }
 .frist-cart {
     background: white;
-    width: 350px;
+    width: 400px;
     height: 600px;
     box-shadow:  10px 10px 10px 10px gainsboro;
     display: flex;
@@ -265,4 +266,39 @@ main {
     color: #f26522;
     font-weight: bold;
 }
+}
+// squrere
+.squre {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+    padding-top: 100px;
+}
+.first-squre {
+    width: 50px;
+    height: 50px;
+    background: #2b2a29;
+
+}
+.first-squre:hover{
+    background: #f26522
+
+}
+
+// Electronic-title
+.Electronic-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    &__text {
+        font-family: $font;
+        font-size: 40px;
+        font-weight: bold;
+
+    }
 }
