--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,18 @@
     margin: 0% auto;
     background-color: #2b2a29;
     clip-path: polygon(0 0, 100% 0, 96% 100%, 3% 100%);
+    @media screen and (max-width:850px) {
+        width: 80%
+        
+    }
+    @media screen and (max-width:770px) {
+        width: 80%;
+    }
+    @media screen and (max-width:600px) {
+        width: 90%
+        
+    }
+   
 }
 .nav-section ul  {
     display: flex;
@@ -44,9 +56,22 @@ li {
     list-style: none;
     font-family: $font;
     font-size: 17px;
+    @media screen and (max-width:850px) {
+        font-size: 16px
+        
+    }
+    @media screen and (max-width:770px) {
+        font-size: 15px
+        
+    }
+    @media screen and (max-width:600px) {
+        font-size: 13px
+        
+    }
+   
 }
 .link-nav:hover {
-    color: #e83e8c
+    color: #f26522
 }
 
 // title-site 
@@ -58,6 +83,7 @@ li {
     margin: 0% auto;
     width: 5%;
     padding-top: 30px;
+   
     &__img {
         justify-content: center;
         align-content: center;
@@ -84,6 +110,10 @@ li {
         padding-right: 10px;
         border:  1px solid #2b2a29;
         border-radius: 5px;
+        @media screen and (max-width:600px) {
+            width: 100px;
+            
+        }
     }
     &__sel:hover {
     background: white;
@@ -104,6 +134,14 @@ li {
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
         padding-left: 10px;
+        @media screen and (max-width:600px) {
+            width: 200px;
+            
+        }
+        @media screen and (max-width:420px) {
+            width: 150px;
+            
+        }
 
     }
    &__inp--black {
@@ -113,6 +151,10 @@ li {
        border: 1px solid #f26522;
        border-top-right-radius: 5px;
        border-bottom-right-radius: 5px;
+       @media screen and (max-width:600px) {
+        width: 20px;
+        
+    }
    }
 }
 // button section 
@@ -123,6 +165,10 @@ li {
         height: 40px;
         width: 90px;
         border-radius: 5px;
+        @media screen and (max-width:420px) {
+            width: 40px;
+            
+        }
     } 
     &__link {
         color: black;
@@ -144,6 +190,10 @@ li {
         font-size: 60px;
         font-family: $font;
         font-weight: bold;
+        @media screen and (max-width:920px) {
+            font-size: 50px
+            
+        }
 
     }
     &__text:hover {
@@ -183,7 +233,11 @@ li {
 // body section
 main {
     width: 100%;
-    height: 3000px;
+    height: 2850px;
+    @media screen and (max-width:1024px) {
+        height: 2000px;
+        
+    }
 } 
 .body-title {
     display: flex;
@@ -194,14 +248,19 @@ main {
     margin: 0% auto;
     width: 21%;
     padding-top: 10px;
+    @media screen and (max-width:920px) {
+        width: 30px;
+        
+    }
     &__text  {
         text-align: center;
         font-size: 30px;
         font-family: $font;
         color: #2b2a29;
-        font-weight: bold
-
+        font-weight: bold;
+      
     }
+   
 }
 // cart section
 .cart-content {
@@ -211,6 +270,10 @@ main {
     align-items: center;
     gap: 30px;
     padding-top: 50px;
+    @media screen and (max-width:1024px) {
+        flex-direction: column
+        
+    }
 }
 .frist-cart {
     background: white;
@@ -221,6 +284,12 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media screen and (max-width:1024px) {
+        width: 400px;
+        height: 550px;
+        
+    }
+    
    
 
 
@@ -299,6 +368,112 @@ main {
         font-family: $font;
         font-size: 40px;
         font-weight: bold;
+
+    }
+}
+// animation
+.animation {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+.animat {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #414744;
+    border-right: 16px solid #f26522;
+    border-bottom: 16px solid #414744;
+    border-left: 16px solid #f26522;
+    width: 120px;
+    height: 120px;
+    
+    animation: spin 10s linear infinite;
+
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg)
+    }
+   
+    100% {
+        transform: rotate(360deg)
+    }
+}
+// footer 
+footer {
+    width: 100%;
+    height: 420px;
+    background-color: #2b2a29;
+    @media screen  and (max-width:1024px){
+        display: none
+        
+    }
+    
+
+}
+.footer-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+}
+.email {
+    display: flex;
+    color: #f3f3f3;
+    justify-content: center;
+    align-items: center;
+    gap: 500px;
+    padding-top:40px;
+    font-family: $font;
+    &__text  {
+        font-size: 17px;
+        
+    }
+    &__text:hover {
+        color: #f26522
+    }
+    &__textone {
+        font-size: 17px;
+        
+    }
+    &__textone:hover {
+        color: #f26522
+    }
+}
+.line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+hr {
+    width: 700px;
+}
+// phone footer 
+.phone-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    font-family: $font;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+.massage-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: $font;
+    color: white;
+    padding-top: 20px;
+    &__mass:hover {
+        color: #f26522
 
     }
 }
