--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,11 @@
         width: 90%
         
     }
+    @media screen and (max-width:395px) {
+        width: 90%;
+        
+    }
+   
    
 }
 .nav-section ul  {
@@ -44,7 +49,11 @@
     &__link li {
         text-decoration: navy;
         list-style: none;
-    }   
+    }  
+    @media screen and (max-width:395px) {
+        gap: 15px;
+        
+    } 
 
 }
 li {
@@ -66,6 +75,10 @@ li {
     }
     @media screen and (max-width:600px) {
         font-size: 13px
+        
+    }
+    @media screen and (max-width:395px) {
+        font-size: 11px;
         
     }
    
@@ -112,6 +125,12 @@ li {
         border-radius: 5px;
         @media screen and (max-width:600px) {
             width: 100px;
+        }
+        @media screen and (max-width:395px) {
+            font-size: 11px;
+        }
+        @media screen and (max-width:280px) {
+            width: 60px
             
         }
     }
@@ -142,6 +161,10 @@ li {
             width: 150px;
             
         }
+        @media screen and (max-width:280px) {
+            width: 120px;
+            
+        }
 
     }
    &__inp--black {
@@ -153,6 +176,10 @@ li {
        border-bottom-right-radius: 5px;
        @media screen and (max-width:600px) {
         width: 20px;
+        
+    }
+    @media screen and (max-width:280px) {
+        width: 15px;
         
     }
    }
@@ -169,12 +196,20 @@ li {
             width: 40px;
             
         }
+        @media screen and (max-width:395px) {
+            width: 30;
+            
+        }
+
     } 
     &__link {
         color: black;
         text-decoration: none;
         font-size: 14px;
-
+        @media screen and (max-width:395px) {
+            font-size: 11px;
+            
+        }
     }
 
 }
