--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,511 +1,6 @@
- $font : sans-serif;
- * {
-     padding: 0%;
-     margin: 0%;
-     box-sizing: border-box
- }
- // start head section 
-.header {
-    width: 100%;
-    height: 600px;
-    background:url(../image/banner-bg.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: $font
-}
-.navbar {
-    background:#343a40;
-    width: 70%;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0% auto;
-    background-color: #2b2a29;
-    clip-path: polygon(0 0, 100% 0, 96% 100%, 3% 100%);
-    @media screen and (max-width:850px) {
-        width: 80%
-        
-    }
-    @media screen and (max-width:770px) {
-        width: 80%;
-    }
-    @media screen and (max-width:600px) {
-        width: 90%
-        
-    }
-    @media screen and (max-width:395px) {
-        width: 90%;
-        
-    }
-   
-   
-}
-.nav-section ul  {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    &__link li {
-        text-decoration: navy;
-        list-style: none;
-    }  
-    @media screen and (max-width:395px) {
-        gap: 15px;
-        
-    } 
-
-}
-li {
-    list-style: none;
-}
-.link-nav {
-    color: white;
-    text-decoration: none;
-    list-style: none;
-    font-family: $font;
-    font-size: 17px;
-    @media screen and (max-width:850px) {
-        font-size: 16px
-        
-    }
-    @media screen and (max-width:770px) {
-        font-size: 15px
-        
-    }
-    @media screen and (max-width:600px) {
-        font-size: 13px
-        
-    }
-    @media screen and (max-width:395px) {
-        font-size: 11px;
-        
-    }
-   
-}
-.link-nav:hover {
-    color: #f26522
-}
-
-// title-site 
-.title-site {
-    display: block;
-    flex-direction: row;
-    justify-items: center;
-    justify-content: center;
-    margin: 0% auto;
-    width: 5%;
-    padding-top: 30px;
-   
-    &__img {
-        justify-content: center;
-        align-content: center;
-    }
-}
-.container-head {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-}
-// select section 
-.select {
-    &__sel {
-        background: #2b2a29;
-        height: 40px;
-        width: 150px;
-        color: white;
-        font-family: $font;
-        font-size: 15px;
-        padding-left: 5px;
-        padding-right: 10px;
-        border:  1px solid #2b2a29;
-        border-radius: 5px;
-        @media screen and (max-width:600px) {
-            width: 100px;
-        }
-        @media screen and (max-width:395px) {
-            font-size: 11px;
-        }
-        @media screen and (max-width:280px) {
-            width: 60px
-            
-        }
-    }
-    &__sel:hover {
-    background: white;
-    color: black;
-
-    }
-}
-
-// input section 
-.input {
-    display: flex;
-    gap: 0.2px;
-    &__inp {
-        width: 400px;
-        height: 40px;
-        background: white;
-        border: 1px solid white;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        padding-left: 10px;
-        @media screen and (max-width:600px) {
-            width: 200px;
-            
-        }
-        @media screen and (max-width:420px) {
-            width: 150px;
-            
-        }
-        @media screen and (max-width:280px) {
-            width: 120px;
-            
-        }
-
-    }
-   &__inp--black {
-       background: #f26522;
-       width: 40px;
-       height: 40px;
-       border: 1px solid #f26522;
-       border-top-right-radius: 5px;
-       border-bottom-right-radius: 5px;
-       @media screen and (max-width:600px) {
-        width: 20px;
-        
-    }
-    @media screen and (max-width:280px) {
-        width: 15px;
-        
-    }
-   }
-}
-// button section 
-.button {
-    &__btn {
-        background: white;
-        border:  1px solid white;
-        height: 40px;
-        width: 90px;
-        border-radius: 5px;
-        @media screen and (max-width:420px) {
-            width: 40px;
-            
-        }
-        @media screen and (max-width:395px) {
-            width: 30;
-            
-        }
-
-    } 
-    &__link {
-        color: black;
-        text-decoration: none;
-        font-size: 14px;
-        @media screen and (max-width:395px) {
-            font-size: 11px;
-            
-        }
-    }
-
-}
-// big title 
-.center-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding-top: 50px;
-    &__text {
-        color: white;
-        font-size: 60px;
-        font-family: $font;
-        font-weight: bold;
-        @media screen and (max-width:920px) {
-            font-size: 50px
-            
-        }
-
-    }
-    &__text:hover {
-        color:#f26522;
-    
-    }
-}
-.button--black {
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    padding-top: 30px;
-    &__btn {
-        background: #2b2a29;
-        width: 150px;
-        height: 50px;
-        color: white;
-        border:  1px solid #2b2a29;
-       border-radius: 5px;
-    }
-    &__btn:hover {
-        background: #f26522;
-        width: 150px;
-        height: 50px;
-        color: white;
-        border:  1px solid #f26522;
-       border-radius: 5px;
-    }
-    &__link {
-        color: white;
-        text-decoration: none;
-        font-size: 15px;
-        font-weight: bold;
-    }
-}
-
-// body section
-main {
-    width: 100%;
-    height: 2850px;
-    @media screen and (max-width:1024px) {
-        height: 2000px;
-        
-    }
-} 
-.body-title {
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    align-content: center;
-    text-align: center;
-    margin: 0% auto;
-    width: 21%;
-    padding-top: 10px;
-    @media screen and (max-width:920px) {
-        width: 30px;
-        
-    }
-    &__text  {
-        text-align: center;
-        font-size: 30px;
-        font-family: $font;
-        color: #2b2a29;
-        font-weight: bold;
-      
-    }
-   
-}
-// cart section
-.cart-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    padding-top: 50px;
-    @media screen and (max-width:1024px) {
-        flex-direction: column
-        
-    }
-}
-.frist-cart {
-    background: white;
-    width: 400px;
-    height: 600px;
-    box-shadow:  10px 10px 10px 10px gainsboro;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    @media screen and (max-width:1024px) {
-        width: 400px;
-        height: 550px;
-        
-    }
-    
-   
-
-
-}
-.para {
-    text-align: center;
-    font-family: $font;
-    font-size: 17px;
-    font-weight: bold;
-    padding-top: -100px
-}
-.para-pri {
-    text-align: center;
-    font-family: $font;
-    font-size: 17px;
-    font-weight: bold;
-    color: #f26522;
-    padding-top: 5px;
-}
-.cart-text {
-    margin-top: -10px;
-}
-.buy {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 150px;
-    padding-top: 100px;
-    font-family: $font;
-&__text-one {
-    color: #f26522;
-    font-weight: bold;
-}
-&__text-one:hover {
-    color: #2b2a29;
-    font-weight: bold;
-}
-&__text-two {
-    color: #2b2a29;
-    font-weight: bold;
-}
-&__text-two:hover {
-    color: #f26522;
-    font-weight: bold;
-}
-}
-// squrere
-.squre {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 200px;
-    padding-top: 100px;
-}
-.first-squre {
-    width: 50px;
-    height: 50px;
-    background: #2b2a29;
-
-}
-.first-squre:hover{
-    background: #f26522
-
-}
-
-// Electronic-title
-.Electronic-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 20px;
-    &__text {
-        font-family: $font;
-        font-size: 40px;
-        font-weight: bold;
-
-    }
-}
-// animation
-.animation {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-}
-.animat {
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #414744;
-    border-right: 16px solid #f26522;
-    border-bottom: 16px solid #414744;
-    border-left: 16px solid #f26522;
-    width: 120px;
-    height: 120px;
-    
-    animation: spin 10s linear infinite;
-
-}
-@keyframes spin {
-    0% {
-        transform: rotate(0deg)
-    }
-   
-    100% {
-        transform: rotate(360deg)
-    }
-}
-// footer 
-footer {
-    width: 100%;
-    height: 420px;
-    background-color: #2b2a29;
-    @media screen  and (max-width:1024px){
-        display: none
-        
-    }
-    
-
-}
-.footer-title {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 80px;
-}
-.email {
-    display: flex;
-    color: #f3f3f3;
-    justify-content: center;
-    align-items: center;
-    gap: 500px;
-    padding-top:40px;
-    font-family: $font;
-    &__text  {
-        font-size: 17px;
-        
-    }
-    &__text:hover {
-        color: #f26522
-    }
-    &__textone {
-        font-size: 17px;
-        
-    }
-    &__textone:hover {
-        color: #f26522
-    }
-}
-.line {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-}
-hr {
-    width: 700px;
-}
-// phone footer 
-.phone-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
-    font-family: $font;
-    color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-}
-.massage-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: $font;
-    color: white;
-    padding-top: 20px;
-    
-}
+@import"../scss/base/rest";
+@import "../scss/componet/button";
+@import "../scss/componet/select";
+@import"../scss/layout/head";
+@import"../scss/layout/content";
+@import "../scss/layout/footer";
