--- a/scss/layout/_head.scss
+++ b/scss/layout/_head.scss
@@ -19,22 +19,17 @@
     background-color: #2b2a29;
     clip-path: polygon(0 0, 100% 0, 96% 100%, 3% 100%);
     @media screen and (max-width:850px) {
-        width: 80%
-        
+        width: 80%  
     }
     @media screen and (max-width:770px) {
         width: 80%;
     }
     @media screen and (max-width:600px) {
-        width: 90%
-        
+        width: 90%;  
     }
     @media screen and (max-width:395px) {
-        width: 90%;
-        
-    }
-   
-   
+        width: 90%; 
+    } 
 }
 .nav-section ul  {
     display: flex;
@@ -48,7 +43,6 @@
         gap: 15px;
         
     } 
-
 }
 li {
     list-style: none;
@@ -60,20 +54,16 @@ li {
     font-family: $font;
     font-size: 17px;
     @media screen and (max-width:850px) {
-        font-size: 16px
-        
+        font-size: 16px; 
     }
     @media screen and (max-width:770px) {
-        font-size: 15px
-        
+        font-size: 15px;
     }
     @media screen and (max-width:600px) {
-        font-size: 13px
-        
+        font-size: 13px;
     }
     @media screen and (max-width:395px) {
         font-size: 11px;
-        
     }
    
 }
@@ -167,10 +157,7 @@ li {
         }
 
     }
-    &__text:hover {
-        color:#f26522;
-    
-    }
+   
 }
 .button--black {
     display: flex;
